--- a/libs/search-widget/src/viewer/Metadata.scss
+++ b/libs/search-widget/src/viewer/Metadata.scss
@@ -1,7 +1,18 @@
 .sw-metadata {
   h2 {
     font-size: calc(var(--font-size-base) * 1.125);
-    margin-bottom: 1.75em;
+    margin-bottom: var(--rhythm-1);
+  }
+
+  .title-and-button {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .annotation-mode-buttons {
+    display: flex;
+    gap: var(--rhythm-1);
   }
 
   .entities {
