--- a/libs/search-widget/src/viewer/Metadata.scss
+++ b/libs/search-widget/src/viewer/Metadata.scss
@@ -1,4 +1,9 @@
 .sw-metadata {
+  &.annotation-mode {
+    position: sticky;
+    top: calc(var(--header-height) + var(--rhythm-4));
+  }
+
   h2 {
     font-size: calc(var(--font-size-base) * 1.125);
     margin-bottom: var(--rhythm-1);
