--- a/libs/search-widget/src/viewer/Viewer.scss
+++ b/libs/search-widget/src/viewer/Viewer.scss
@@ -1,8 +1,11 @@
 .sw-viewer {
+  --viewer-left-padding: var(--rhythm-2);
+  --viewer-right-padding: var(--rhythm-4) var(--rhythm-2);
+
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
+  background-color: var(--color-light-stronger);
 
   .viewer-header {
     position: sticky;
@@ -13,19 +16,19 @@
     flex: 1 1 0;
     display: grid;
     grid-template-columns: 100%;
-    background-color: #fff;
+    background-color: var(--color-light-stronger);
   }
   .viewer-left {
-    padding: 1em;
+    padding: var(--viewer-left-padding);
     grid-row: start 2;
   }
   .viewer-right {
-    padding: 2em 1em;
-    background-color: #efefef;
+    padding: var(--viewer-right-padding);
+    background-color: var(--color-neutral-lighter);
     grid-row: start 1;
   }
   .paragraphs {
-    margin-top: 2em;
+    margin-top: var(--rhythm-4);
   }
   pre {
     font-family: var(--font-family-body);
@@ -48,11 +51,11 @@
       grid-template-columns: 33% 66%;
     }
     .viewer-left {
-      padding: 1.75em 3em 0 2em;
+      --viewer-left-padding: var(--rhythm-3) var(--rhythm-6) 0 var(--rhythm-4);
       grid-row: auto;
     }
     .viewer-right {
-      padding: 2em 3em;
+      --viewer-right-padding: var(--rhythm-4) var(--rhythm-6);
       grid-row: auto;
     }
   }
