Ability to scroll in entity list

--- a/libs/search-widget/src/viewer/Metadata.scss
+++ b/libs/search-widget/src/viewer/Metadata.scss
@@ -22,6 +22,8 @@
 
   .entities {
     margin-bottom: 2.5em;
+    max-height: calc(var(--modal-content-height) - var(--header-height) - var(--rhythm-12));
+    overflow: auto;
   }
 
   .preview-links {
