Display entity annotation button only when this feature is enabled

--- a/apps/dashboard/src/app/widgets/edit/edit-widget.component.html
+++ b/apps/dashboard/src/app/widgets/edit/edit-widget.component.html
@@ -32,6 +32,7 @@
                 <pa-toggle *ngIf="isTrainingEnabled | async" formControlName="suggestLabels">
                   {{ 'stash.widgets.suggestLabels' | translate }}</pa-toggle>
                 <pa-toggle formControlName="editLabels">{{ 'stash.widgets.editLabels' | translate }}</pa-toggle>
+                <pa-toggle formControlName="entityAnnotation">{{ 'stash.widgets.entityAnnotation' | translate }}</pa-toggle>
               </div>
               <div *ngIf="mainForm.controls.mode.value === 'form'">
                 <pa-input [(value)]="placeholder" (valueChange)="onPlaceholderChange($event)">{{'stash.widgets.placeholder' | translate}}</pa-input>
