Fix [sc-2578]: Disable entity annotation on safari

--- a/libs/search-widget/src/common/modal/Modal.scss
+++ b/libs/search-widget/src/common/modal/Modal.scss
@@ -1,69 +1,18 @@
+@import "_common-modal.scss";
+
 .sw-modal-backdrop {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: var(--z-index-modal-backdrop);
 
-  &.fade {
-    animation: fadeIn 400ms;
-    -webkit-animation: fadeIn 400ms;
-    -moz-animation: fadeIn 400ms;
-    -o-animation: fadeIn 400ms;
-    -ms-animation: fadeIn 400ms;
-  }
-
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  &:not(.popup) {
-    background-color: var(--color-backdrop);
-  }
-
-  .modal {
-    align-items: stretch;
-    border: 0;
-    display: flex;
-    flex: 1 1 0;
-    flex-flow: column nowrap;
-    padding: 0;
-    color: inherit;
-    margin: 0;
-    z-index: var(--z-index-modal);
-    max-width: 100vw;
-    background-color: transparent;
-  }
-  .modal .modal-content {
-    overflow: auto;
-    background-color: var(--color-light-stronger);
-  }
   &.popup .modal .modal-content {
     box-shadow: var(--shadow-modal);
   }
 
-  @media (min-width: 599px) {
-    .modal .modal-content::-webkit-scrollbar {
-      width: 6px;
-    }
-    .modal .modal-content::-webkit-scrollbar-thumb {
-      background-color: var(--color-scrollbar-thumb);
-    }
-    .modal .modal-content::-webkit-scrollbar-track {
-      background-color: var(--color-scrollbar-track);
-    }
-  }
-
-  &:not(.popup) .modal {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+  &.popup .modal {
+    position: fixed;
+    top: var(--popup-top);
+    left: 0;
+    margin-top: var(--rhythm-0_5);
+    transform: none;
+    width: 100vw;
   }
 
   &:not(.popup) .modal-content {
@@ -78,18 +27,9 @@
     margin-top: 5px;
     width: 100vw;
   }
-
-  .modal-content {
-    z-index: 0;
-    overflow: scroll;
-  }
 }
 @media (min-width: 599px) {
   .sw-modal-backdrop {
-    .modal {
-      max-height: calc(100vh - var(--popup-top));
-      max-width: calc(100vw - 20px);
-    }
     &.popup .modal {
       left: var(--popup-left);
       width: 500px;
