--- a/libs/common/src/lib/pagination/pagination.component.html
+++ b/libs/common/src/lib/pagination/pagination.component.html
@@ -2,7 +2,7 @@
      fxLayout="row"
      fxLayoutAlign="center center"
      fxLayoutGap="16px">
-  <button [disabled]="_page === 1"
+  <button [disabled]="_page <= 1"
           (click)="prev.emit()">&lt;</button>
   <div translate
        [translateParams]="{current: _page, total: _total }">
