[sc-2223] Resource list status column icons

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -98,7 +98,7 @@
             {{ 'resource.status' | translate }}
           </th>
           <td cdk-cell *cdkCellDef="let resource" [title]="resource.metadata.status">
-            <svg-icon [src]="getStatusIcon(resource.metadata.status)"></svg-icon>
+            <nsi-status [status]="resource.metadata.status"></nsi-status>
           </td>
         </ng-container>
 
