[sc-2223] Resource list status tooltip

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -97,7 +97,11 @@
           <th cdk-header-cell *cdkHeaderCellDef>
             {{ 'resource.status' | translate }}
           </th>
-          <td cdk-cell *cdkCellDef="let resource" [title]="resource.metadata.status">
+          <td cdk-cell
+              *cdkCellDef="let resource"
+              (mouseenter)="getProcessingStatus(resource)"
+              [paTooltip]="statusTooltips[resource.id]"
+              [paTooltipOffset]="-16">
             <nsi-status [status]="resource.metadata.status"></nsi-status>
           </td>
         </ng-container>
