[sc-2223] New status column with tooltip on resource list  (#313)
* [sc-2223] Resource list status column icons

* [sc-2223] Resource list status tooltip

* last_delivered_seqid can be null

* Fix import path

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -97,8 +97,12 @@
           <th cdk-header-cell *cdkHeaderCellDef>
             {{ 'resource.status' | translate }}
           </th>
-          <td cdk-cell *cdkCellDef="let resource" [title]="resource.metadata.status">
-            <svg-icon [src]="getStatusIcon(resource.metadata.status)"></svg-icon>
+          <td cdk-cell
+              *cdkCellDef="let resource"
+              (mouseenter)="getProcessingStatus(resource)"
+              [paTooltip]="statusTooltips[resource.id]"
+              [paTooltipOffset]="-16">
+            <nsi-status [status]="resource.metadata.status"></nsi-status>
           </td>
         </ng-container>
 
