[sc-2223] Improving status tooltip rendering in resource list

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -101,6 +101,7 @@
               *cdkCellDef="let resource"
               (mouseenter)="getProcessingStatus(resource)"
               [paTooltip]="statusTooltips[resource.id]"
+              paTooltipType="system"
               [paTooltipOffset]="-16">
             <nsi-status [status]="resource.metadata.status"></nsi-status>
           </td>
