--- a/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
+++ b/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
@@ -4,6 +4,8 @@
            [kind]="kind"
            [disabled]="disabled"
            [paPopup]="popupRef"
+           [icon]="icon"
+           [iconAndText]="!!icon"
            sameWidth>
   <ng-content></ng-content>
   <pa-icon [name]="open ? 'chevron-up' : 'chevron-down'"></pa-icon>
