--- a/apps/dashboard/src/app/components/label/label-field/label-field.component.html
+++ b/apps/dashboard/src/app/components/label/label-field/label-field.component.html
@@ -1,43 +1,13 @@
-<!-- FIXME: what happen when there is no labels? (hasLabels false) -->
-<div #selectLabels
-     *ngIf="hasLabels | async"
+<div *ngIf="hasLabels | async"
      class="label-field">
-  <div class="label-selector">
-    <nsi-dropdown-button [popupRef]="labelSelection"
-                         [open]="open">{{ 'generic.select_tags' | translate }}</nsi-dropdown-button>
 
-    <pa-dropdown #labelSelection
-                 dontAdjustPosition
-                 [companionElement]="level2Element?.nativeElement"
-                 (onClose)="closeDropdowns()"
-                 (onOpen)="open = true">
-      <ng-container *ngFor="let labelSet of (labelSets$ | async) | keyvalue; let index=index">
-        <pa-option *ngIf="labelSet.value.labels.length > 0"
-                   icon="chevron-right"
-                   iconOnRight
-                   dontCloseOnSelect
-                   [popupPosition]="{position: 'relative', left: '100%', top: (index * 40 + 4) + 'px'}"
-                   [paPopup]="level2"
-                   [selected]="labelSetExpanded === labelSet.key"
-                   (selectOption)="onLevel1Selection(labelSet.key, labelSet.value)">
-          <span class="label-color" [style.background-color]="labelSet.value.color"></span>
-          {{labelSet.value.title}}
-        </pa-option>
-      </ng-container>
-    </pa-dropdown>
-
-    <pa-dropdown #level2 dontAdjustPosition>
-      <pa-option *ngFor="let labelValue of labelValues"
-                 dontCloseOnSelect>
-        <pa-checkbox [value]="checkboxSelection.includes(labelValue.labelset + labelValue.label)"
-                     (valueChange)="toggleLabel(labelValue)">{{labelValue.label}}</pa-checkbox>
-      </pa-option>
-    </pa-dropdown>
-  </div>
+  <app-label-dropdown [labelSets]="labelSets$ | async"
+                      [selection]="selection"
+                      (selectionChange)="updateSelection($event)">{{ 'generic.select_tags' | translate }}</app-label-dropdown>
 
   <div class="label-field-names">
     <app-label-list [labelSets]="labelSets$ | async"
                     [labelSelection]="selection"
-                    (labelSelectionChange)="selectionChange.emit($event)"></app-label-list>
+                    (labelSelectionChange)="updateSelection($event)"></app-label-list>
   </div>
 </div>
