--- a/libs/search-widget/src/old-components/viewer/previewers/Pdf.scss
+++ b/libs/search-widget/src/old-components/viewer/previewers/Pdf.scss
@@ -16,4 +16,10 @@
   .controls {
     margin: -2.75em 0 0.75em 0;
   }
+  .loading-dots {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
 }
