When source is S3, show only Nuclia Cloud destination

--- a/apps/desktop/src/app/upload/upload.component.html
+++ b/apps/desktop/src/app/upload/upload.component.html
@@ -21,6 +21,7 @@
     <ng-container *ngIf="step === 2">
       <h2>Push to</h2>
       <nde-connectors type="destinations"
+                      [connectorIds]="source.isExternal ? ['nucliacloud'] : undefined"
                       (selectConnector)="selectDestination($event)"
                       (cancel)="cancel()"></nde-connectors>
     </ng-container>
