Add selected labels to selected resources
- Add missing spanish and catalan translations using BabelEdit embedded Google Translate
- Fix style warning (replace start by flex-start)

--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -74,7 +74,7 @@ stf-section-navbar-body {
 
 
         pa-radio-group {
-          align-items: start;
+          align-items: flex-start;
           column-gap: rhythm(4);
           display: flex !important;
           flex-wrap: wrap;
